tests/files/type_checker_tests/should_pass/003.cmdr
//Should allow setting variables before being used in functions
x = 3;
add(x, y) {
	return x + y;
}