tests/files/type_checker_tests/should_fail/040.cmdr
//Should fail when add setting incompatible types
x = 3;
x += true;
